--- a/bbt.bib
+++ b/bbt.bib
@@ -11,7 +11,7 @@
   year          = {2004},
   month         = jul,
   booktitle     = {Proceedings of the 19th {{Annual IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
-  publisher     = {{IEEE Computer Science Press}},
+  publisher     = {{IEEE Computer Society}},
   series        = {{{LICS}} '04},
   pages         = {415--425},
   doi           = {10.1109/LICS.2004.1319636},
@@ -29,13 +29,14 @@
   month         = nov,
   booktitle     = {Handbook of Quantum Logic and Quantum Structures},
   editor        = {Engesser, Kurt and Gabbay, Dov M. and Lehmann, Daniel},
-  publisher     = {Elsevier},
+  publisher     = {{Elsevier}},
   address       = {Amsterdam},
   pages         = {261--323},
   doi           = {10.1016/B978-0-444-52869-8.50010-4},
   archiveprefix = {arXiv},
   eprint        = {0808.1023},
   abstract      = {This invited chapter in the Handbook of Quantum Logic and Quantum Structures consists of two parts: 1. A substantially updated version of quant-ph/0402130 by the same authors, which initiated the area of categorical quantum mechanics, but had not yet been published in full length; 2. An overview of the progress which has been made since then in this area.},
+  keywords      = {protocols, teleportation, performance evaluation, quantum computing, quantum entanglement, quantum mechanics, laboratories, communication channels, force measurement, measurement standards},
   note          = {Substantially updated version of \cite{Abramsky2004} by the same authors.}
 }
 
@@ -45,7 +46,7 @@
   year          = {2005},
   month         = jun,
   booktitle     = {Proceedings of the 20th Annual {{IEEE}} Symposium on Logic in Computer Science},
-  publisher     = {{IEEE Computer Society Press}},
+  publisher     = {{IEEE Computer Society}},
   address       = {{Chicago, USA}},
   series        = {{{LICS}} '05},
   pages         = {249--258},
@@ -109,6 +110,7 @@
   booktitle     = {Reversible {{Computation}} ({{RC}} '19)},
   editor        = {Thomsen, Michael Kirkedal and Soeken, Mathias},
   publisher     = {{Springer International Publishing}},
+  address       = {{Cham}},
   series        = {Lecture Notes in Computer Science},
   volume        = {11497},
   pages         = {87--107},
@@ -116,7 +118,7 @@
   archiveprefix = {arXiv},
   eprint        = {1908.02644},
   abstract      = {One of the most fundamental aspects of quantum circuit design is the concept of families of circuits parametrized by an instance size. As in classical programming, metaprogramming allows the programmer to write entire families of circuits simultaneously, an ability which is of particular importance in the context of quantum computing as algorithms frequently use arithmetic over non-standard word lengths. In this work, we introduce metaQASM, a typed extension of the openQASM language supporting the metaprogramming of circuit families. Our language and type system, built around a lightweight implementation of sized types, supports subtyping over register sizes and is moreover type-safe. In particular, we prove that our system is strongly normalizing, and as such any well-typed metaQASM program can be statically unrolled into a finite circuit.},
-  keywords      = {quantum computing, openqasm, qasm}
+  keywords      = {quantum programming, circuit description languages, metaprogramming, openqasm, qasm}
 }
 
 @article{ArdeshirLarijani2018,
@@ -125,7 +127,7 @@
   year      = {2018},
   month     = nov,
   journal   = {ACM Transactions on Computational Logic},
-  publisher = {Association for Computing Machinery},
+  publisher = {{Association for Computing Machinery}},
   volume    = {19},
   number    = {4},
   pages     = {28},
@@ -147,8 +149,7 @@
   number    = {9},
   pages     = {093021},
   doi       = {10.1088/1367-2630/16/9/093021},
-  abstract  = {The ZX-calculus is a graphical calculus for reasoning about quantum systems and processes. It is known to be universal for pure state qubit quantum mechanics (QM), meaning any pure state, unitary operation and post-selected pure projective measurement can be expressed in the ZX-calculus. The calculus is also sound, i.e. any equality that can be derived graphically can also be derived using matrix mechanics. Here, we show that the ZX-calculus is complete for pure qubit stabilizer QM, meaning any equality that can be derived using matrices can also be derived pictorially. The proof relies on bringing diagrams into a normal form based on graph states and local Clifford operations.},
-  keywords  = {quantum foundations, quantum computing, logic, graphical calculus, stabilizer quantum mechanics, graph states}
+  abstract  = {The ZX-calculus is a graphical calculus for reasoning about quantum systems and processes. It is known to be universal for pure state qubit quantum mechanics (QM), meaning any pure state, unitary operation and post-selected pure projective measurement can be expressed in the ZX-calculus. The calculus is also sound, i.e. any equality that can be derived graphically can also be derived using matrix mechanics. Here, we show that the ZX-calculus is complete for pure qubit stabilizer QM, meaning any equality that can be derived using matrices can also be derived pictorially. The proof relies on bringing diagrams into a normal form based on graph states and local Clifford operations.}
 }
 
 @inproceedings{Badescu2015,
@@ -173,13 +174,14 @@
   month         = jul,
   booktitle     = {New Structures for Physics},
   editor        = {Coecke, Bob},
-  publisher     = {{Springer Berlin Heidelberg}},
+  publisher     = {{Springer}},
   address       = {{Berlin, Heidelberg}},
   pages         = {95--172},
   doi           = {10.1007/978-3-642-12821-9_2},
   archiveprefix = {arXiv},
   eprint        = {0903.0340},
-  abstract      = {In physics, Feynman diagrams are used to reason about quantum processes. In the 1980s, it became clear that underlying these diagrams is a powerful analogy between quantum physics and topology. Namely, a linear operator behaves very much like a "cobordism": a manifold representing spacetime, going between two manifolds representing space. This led to a burst of work on topological quantum field theory and "quantum topology". But this was just the beginning: similar diagrams can be used to reason about logic, where they represent proofs, and computation, where they represent programs. With the rise of interest in quantum cryptography and quantum computation, it became clear that there is extensive network of analogies between physics, topology, logic and computation. In this expository paper, we make some of these analogies precise using the concept of "closed symmetric monoidal category". We assume no prior knowledge of category theory, proof theory or computer science.}
+  abstract      = {In physics, Feynman diagrams are used to reason about quantum processes. In the 1980s, it became clear that underlying these diagrams is a powerful analogy between quantum physics and topology. Namely, a linear operator behaves very much like a "cobordism": a manifold representing spacetime, going between two manifolds representing space. This led to a burst of work on topological quantum field theory and "quantum topology". But this was just the beginning: similar diagrams can be used to reason about logic, where they represent proofs, and computation, where they represent programs. With the rise of interest in quantum cryptography and quantum computation, it became clear that there is extensive network of analogies between physics, topology, logic and computation. In this expository paper, we make some of these analogies precise using the concept of "closed symmetric monoidal category". We assume no prior knowledge of category theory, proof theory or computer science.},
+  keywords      = {monoidal category, intuitionistic logic, lambda calculus}
 }
 
 @article{Bettelli2003,
@@ -266,7 +268,7 @@
   month     = aug,
   booktitle = {46th International Symposium on Mathematical Foundations of Computer Science (MFCS 2021)},
   editor    = {Bonchi, Filippo and Puglisi, Simon J.},
-  publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
   address   = {Dagstuhl, Germany},
   series    = {Leibniz International Proceedings in Informatics (LIPIcs)},
   volume    = {202},
@@ -349,7 +351,7 @@
   author    = {Coecke, Bob and Kissinger, Aleks},
   year      = {2017},
   month     = mar,
-  publisher = {Cambridge University Press},
+  publisher = {{Cambridge University Press}},
   address   = {Cambridge},
   doi       = {10.1017/9781316219317},
   abstract  = {The unique features of the quantum world are explained in this book through the language of diagrams, setting out an innovative visual method for presenting complex theories. Requiring only basic mathematical literacy, this book employs a unique formalism that builds an intuitive understanding of quantum features while eliminating the need for complex calculations. This entirely diagrammatic presentation of quantum theory represents the culmination of ten years of research, uniting classical techniques in linear algebra and Hilbert spaces with cutting-edge developments in quantum computation and foundations. Written in an entertaining and user-friendly style and including more than one hundred exercises, this book is an ideal first course in quantum theory, foundations, and computation for students from undergraduate to PhD level, as well as an opportunity for researchers from a broad range of fields, from physics to biology, linguistics, and cognitive science, to discover a new set of tools for studying processes and interaction.}
@@ -387,7 +389,7 @@
   year          = {2017},
   month         = jan,
   booktitle     = {Proceedings of the 44th ACM SIGPLAN Symposium on Principles of Programming Languages},
-  publisher     = {Association for Computing Machinery},
+  publisher     = {{Association for Computing Machinery}},
   address       = {New York, NY, USA},
   series        = {POPL '17},
   pages         = {833--845},
@@ -486,7 +488,8 @@
   doi           = {10.1007/978-3-030-52482-1_9},
   archiveprefix = {arXiv},
   eprint        = {2005.08396},
-  abstract      = {We introduce dependently typed Proto-Quipper, or Proto-Quipper-D for short, an experimental quantum circuit programming language with linear dependent types. We give several examples to illustrate how linear dependent types can help in the construction of correct quantum circuits. Specifically, we show how dependent types enable programming families of circuits, and how dependent types solve the problem of type-safe uncomputation of garbage qubits. We also discuss other language features along the way.}
+  abstract      = {We introduce dependently typed Proto-Quipper, or Proto-Quipper-D for short, an experimental quantum circuit programming language with linear dependent types. We give several examples to illustrate how linear dependent types can help in the construction of correct quantum circuits. Specifically, we show how dependent types enable programming families of circuits, and how dependent types solve the problem of type-safe uncomputation of garbage qubits. We also discuss other language features along the way.},
+  keywords      = {quantum programming languages, linear dependent types, proto-quipper-d}
 }
 
 @inproceedings{Gay2005,
@@ -528,7 +531,7 @@
   month         = jul,
   booktitle     = {Computer Aided Verification ({{CAV}} '08)},
   editor        = {Gupta, Aarti and Malik, Sharad},
-  publisher     = {Springer},
+  publisher     = {{Springer}},
   address       = {Berlin, Heidelberg},
   series        = {Lecture Notes in Computer Science},
   volume        = {5123},
@@ -536,7 +539,8 @@
   doi           = {10.1007/978-3-540-70545-1_51},
   archiveprefix = {arXiv},
   eprint        = {0704.3705},
-  abstract      = {The novel field of quantum computation and quantum information has been growing at a rapid rate; the study of quantum information in particular has led to the emergence of communication and cryptographic protocols with no classical analogues. Quantum information protocols have interesting properties which are not exhibited by their classical counterparts, but they are most distinguished for their applications in cryptography. Notable results include the unconditional security proof [1] of quantum key distribution. This result, in particular, is one of the reasons for the widespread interest in this field. Furthermore, the implementation of quantum cryptography has been demonstrated in non-laboratory settings and is already an important practical technology. Implementations of quantum cryptography have already been commercially launched and tested by a number of companies including MagiQ, Id Quantique, Toshiba, and NEC. The unconditional security of quantum key distribution protocols does not automatically imply the same degree of security for actual systems, of course; this justifies the need for systems modelling and verification in this setting.}
+  abstract      = {The novel field of quantum computation and quantum information has been growing at a rapid rate; the study of quantum information in particular has led to the emergence of communication and cryptographic protocols with no classical analogues. Quantum information protocols have interesting properties which are not exhibited by their classical counterparts, but they are most distinguished for their applications in cryptography. Notable results include the unconditional security proof [1] of quantum key distribution. This result, in particular, is one of the reasons for the widespread interest in this field. Furthermore, the implementation of quantum cryptography has been demonstrated in non-laboratory settings and is already an important practical technology. Implementations of quantum cryptography have already been commercially launched and tested by a number of companies including MagiQ, Id Quantique, Toshiba, and NEC. The unconditional security of quantum key distribution protocols does not automatically imply the same degree of security for actual systems, of course; this justifies the need for systems modelling and verification in this setting.},
+  note          = {Tool paper}
 }
 
 @book{Gay2009,
@@ -544,7 +548,7 @@
   year      = {2009},
   month     = nov,
   editor    = {Gay, Simon J. and Mackie, Ian},
-  publisher = {Cambridge University Press},
+  publisher = {{Cambridge University Press}},
   address   = {Cambridge},
   doi       = {10.1017/CBO9781139193313},
   abstract  = {The study of computational processes based on the laws of quantum mechanics has led to the discovery of new algorithms, cryptographic techniques, and communication primitives. This book explores quantum computation from the perspective of the branch of theoretical computer science known as semantics, as an alternative to the more well-known studies of algorithmics, complexity theory, and information theory. It collects chapters from leading researchers in the field, discussing the theory of quantum programming languages, logics and tools for reasoning about quantum systems, and novel approaches to the foundations of quantum mechanics. This book is suitable for graduate students and researchers in quantum information and computation, as well as those in semantics, who want to learn about a new field arising from the application of semantic techniques to quantum information and computation.}
@@ -602,7 +606,7 @@
   month         = jul,
   booktitle     = {Reversible {{Computation}} ({{RC}} '13)},
   editor        = {Dueck, Gerhard W. and Miller, D. Michael},
-  publisher     = {Springer},
+  publisher     = {{Springer}},
   address       = {Berlin, Heidelberg},
   series        = {Lecture Notes in Computer Science},
   volume        = {7948},
@@ -694,7 +698,7 @@
   month     = jun,
   booktitle = {12th International Conference on Interactive Theorem Proving (ITP 2021)},
   editor    = {Cohen, Liron and Kaliszyk, Cezary},
-  publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
   address   = {Dagstuhl, Germany},
   series    = {Leibniz International Proceedings in Informatics (LIPIcs)},
   volume    = {193},
@@ -727,7 +731,7 @@
   month     = jan,
   booktitle = {9th Workshop on Evaluation and Usability of Programming  Languages and Tools (PLATEAU 2018)},
   editor    = {Titus Barik and Joshua Sunshine and Sarah Chasins},
-  publisher = {Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
+  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
   address   = {Dagstuhl, Germany},
   series    = {OpenAccess Series in Informatics (OASIcs)},
   volume    = {67},
@@ -832,7 +836,7 @@
   year          = {2021},
   month         = oct,
   booktitle     = {41st IARCS Annual Conference on Foundations of Software Technology and Theoretical Computer Science (FSTTCS 2021)},
-  publisher     = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+  publisher     = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
   address       = {Dagstuhl, Germany},
   series        = {Leibniz International Proceedings in Informatics (LIPIcs)},
   volume        = {To appear},
@@ -952,7 +956,7 @@
   year      = {2019},
   month     = mar,
   journal   = {Dagstuhl Reports},
-  publisher = {Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
+  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
   address   = {Dagstuhl, Germany},
   volume    = {8},
   number    = {9},
@@ -960,6 +964,7 @@
   doi       = {10.4230/DagRep.8.9.112},
   url       = {https://www.dagstuhl.de/18381},
   abstract  = {This report documents the program and the outcomes of Dagstuhl Seminar 18381 "Quantum Programming Languages", which brought together researchers from quantum computing and classical programming languages.},
+  keywords  = {compilers, functional programming, quantum computing, reversible computing, verification},
   note      = {Dagstuhl Reports, Volume 8, Issue 9. Seminar dates: September 16--21, 2018}
 }
 
@@ -990,7 +995,7 @@
   year          = {2014},
   month         = jan,
   booktitle     = {Proceedings of the 41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
-  publisher     = {Association for Computing Machinery},
+  publisher     = {{Association for Computing Machinery}},
   address       = {New York, NY, USA},
   series        = {POPL '14},
   pages         = {647--658},
@@ -1009,11 +1014,13 @@
   month      = apr,
   booktitle  = {Theory and {{Applications}} of {{Models}} of {{Computation}} ({{TAMC}} '17)},
   publisher  = {{Springer International Publishing}},
+  address    = {{Cham}},
   series     = {Lecture Notes in Computer Science},
   volume     = {10185},
   pages      = {455--469},
   doi        = {10.1007/978-3-319-55911-7_33},
-  abstract   = {We propose qPCF, a functional language able to define and manipulate quantum circuits in an easy and intuitive way. qPCF follows the tradition of "quantum data & classical control" languages, inspired to the QRAM model. Ideally, qPCF computes finite circuit descriptions which are offloaded to a quantum co-processor (i.e. a quantum device) for the execution. qPCF extends   PCF  with a new kind of datatype: quantum circuits. The typing of qPCF is quite different from the mainstream of "quantum data & classical control" languages that involves linear/exponential modalities. qPCF uses a simple form of dependent types to manage circuits and an implicit form of monad to manage quantum states via a destructive-measurement operator.}
+  abstract   = {We propose qPCF, a functional language able to define and manipulate quantum circuits in an easy and intuitive way. qPCF follows the tradition of "quantum data & classical control" languages, inspired to the QRAM model. Ideally, qPCF computes finite circuit descriptions which are offloaded to a quantum co-processor (i.e. a quantum device) for the execution. qPCF extends   PCF  with a new kind of datatype: quantum circuits. The typing of qPCF is quite different from the mainstream of "quantum data & classical control" languages that involves linear/exponential modalities. qPCF uses a simple form of dependent types to manage circuits and an implicit form of monad to manage quantum states via a destructive-measurement operator.},
+  keywords   = {quantum circuit, classical control, quantum programming language}
 }
 
 @inproceedings{Paolini2019,
@@ -1099,13 +1106,14 @@
   month     = apr,
   booktitle = {Foundations of Software Science and Computation Structures, FoSSaCS 2020},
   editor    = {Goubault-Larrecq, Jean and K{\"o}nig, Barbara},
-  publisher = {Springer International Publishing},
+  publisher = {{Springer International Publishing}},
   address   = {Cham},
   series    = {Lecture Notes in Computer Science},
   volume    = {12077},
   pages     = {562--581},
   doi       = {10.1007/978-3-030-45231-5_29},
-  abstract  = {Inductive datatypes in programming languages allow users to define useful data structures such as natural numbers, lists, trees, and others. In this paper we show how inductive datatypes may be added to the quantum programming language QPL. We construct a sound categorical model for the language and by doing so we provide the first detailed semantic treatment of user-defined inductive datatypes in quantum programming. We also show our denotational interpretation is invariant with respect to big-step reduction, thereby establishing another novel result for quantum programming. Compared to classical programming, this property is considerably more difficult to prove and we demonstrate its usefulness by showing how it immediately implies computational adequacy at all types. To further cement our results, our semantics is entirely based on a physically natural model of von Neumann algebras, which are mathematical structures used by physicists to study quantum mechanics.}
+  abstract  = {Inductive datatypes in programming languages allow users to define useful data structures such as natural numbers, lists, trees, and others. In this paper we show how inductive datatypes may be added to the quantum programming language QPL. We construct a sound categorical model for the language and by doing so we provide the first detailed semantic treatment of user-defined inductive datatypes in quantum programming. We also show our denotational interpretation is invariant with respect to big-step reduction, thereby establishing another novel result for quantum programming. Compared to classical programming, this property is considerably more difficult to prove and we demonstrate its usefulness by showing how it immediately implies computational adequacy at all types. To further cement our results, our semantics is entirely based on a physically natural model of von Neumann algebras, which are mathematical structures used by physicists to study quantum mechanics.},
+  keywords  = {quantum programming, inductive types, adequacy}
 }
 
 @misc{QiskitCommunity2017,
@@ -1183,7 +1191,7 @@
   month      = jan,
   booktitle  = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, June 3--7, 2018},
   editor     = {Selinger, Peter and Chiribella, Giulio},
-  publisher  = {Open Publishing Association},
+  publisher  = {{Open Publishing Association}},
   series     = {Electronic Proceedings in Theoretical Computer Science},
   volume     = {287},
   pages      = {299--312},
@@ -1214,12 +1222,13 @@
   year      = {2018},
   month     = apr,
   booktitle = {The {{Thirty}}-Third {{Conference}} on the {{Mathematical Foundations}} of {{Programming Semantics}} ({{MFPS XXXIII}})},
-  publisher = {Elsevier},
+  publisher = {{Elsevier}},
   series    = {Electronic Notes in Theoretical Computer Science},
   volume    = {336},
   pages     = {257--279},
   doi       = {10.1016/j.entcs.2018.03.027},
   abstract  = {We describe categorical models of a circuit-based (quantum) functional programming language. We show that enriched categories play a crucial role. Following earlier work on QWire by Paykin et al., we consider both a simple first-order linear language for circuits, and a more powerful host language, such that the circuit language is embedded inside the host language. Our categorical semantics for the host language is standard, and involves cartesian closed categories and monads. We interpret the circuit language not in an ordinary category, but in a category that is enriched in the host category. As an extended example, we recall an earlier result that the category of W*-algebras is dcpo-enriched, and we use this model to extend the circuit language with some recursive types.},
+  keywords  = {enriched categories, categorical semantics, linear type theory, quantum circuits, relative monad,quantum domain theory},
   note      = {See also the later version: \cite{Rennela2020}}
 }
 
@@ -1294,19 +1303,21 @@
 }
 
 @inproceedings{Sabry2018,
-  title     = {From Symmetric Pattern-Matching to Quantum Control},
-  author    = {Sabry, Amr and Valiron, Beno{\^i}t and Vizzotto, Juliana Kaizer},
-  year      = {2018},
-  month     = apr,
-  booktitle = {Foundations of Software Science and Computation Structures, FoSSaCS 2018},
-  editor    = {Baier, Christel and Dal Lago, Ugo},
-  publisher = {{Springer International Publishing}},
-  address   = {{Cham}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {10803},
-  pages     = {348--364},
-  doi       = {10.1007/978-3-319-89366-2_19},
-  abstract  = {One perspective on quantum algorithms is that they are classical algorithms having access to a special kind of memory with exotic properties. This perspective suggests that, even in the case of quantum algorithms, the control flow notions of sequencing, conditionals, loops, and recursion are entirely classical. There is however, another notion of control flow, that is itself quantum. The notion of quantum conditional expression is reasonably well-understood: the execution of the two expressions becomes itself a superposition of executions. The quantum counterpart of loops and recursion is however not believed to be meaningful in its most general form.}
+  title         = {From Symmetric Pattern-Matching to Quantum Control},
+  author        = {Sabry, Amr and Valiron, Beno{\^i}t and Vizzotto, Juliana Kaizer},
+  year          = {2018},
+  month         = apr,
+  booktitle     = {Foundations of Software Science and Computation Structures, FoSSaCS 2018},
+  editor        = {Baier, Christel and Dal Lago, Ugo},
+  publisher     = {{Springer International Publishing}},
+  address       = {{Cham}},
+  series        = {Lecture Notes in Computer Science},
+  volume        = {10803},
+  pages         = {348--364},
+  doi           = {10.1007/978-3-319-89366-2_19},
+  archiveprefix = {arXiv},
+  eprint        = {1804.00952},
+  abstract      = {One perspective on quantum algorithms is that they are classical algorithms having access to a special kind of memory with exotic properties. This perspective suggests that, even in the case of quantum algorithms, the control flow notions of sequencing, conditionals, loops, and recursion are entirely classical. There is however, another notion of control flow, that is itself quantum. The notion of quantum conditional expression is reasonably well-understood: the execution of the two expressions becomes itself a superposition of executions. The quantum counterpart of loops and recursion is however not believed to be meaningful in its most general form.}
 }
 
 @inproceedings{Selinger2004,
@@ -1461,7 +1472,7 @@
   year      = {2015},
   month     = jan,
   booktitle = {Proceedings of the 42nd Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
-  publisher = {Association for Computing Machinery},
+  publisher = {{Association for Computing Machinery}},
   address   = {New York, NY, USA},
   series    = {POPL '15},
   pages     = {395--406},
@@ -1582,7 +1593,7 @@
   month     = nov,
   booktitle = {Formal Methods: Foundations and Applications: 12th Brazilian Symposium on Formal Methods, SBMF 2009 Gramado, Brazil, August 19-21, 2009 Revised Selected Papers},
   editor    = {Oliveira, Marcel Vin{\'i}cius Medeiros and Woodcock, Jim},
-  publisher = {Springer-Verlag},
+  publisher = {{Springer}},
   address   = {Berlin, Heidelberg},
   pages     = {321--335},
   numpages  = {15},
@@ -1700,7 +1711,7 @@
   year      = {2017},
   month     = jan,
   booktitle = {Proceedings of the 44th ACM SIGPLAN Symposium on Principles of Programming Languages},
-  publisher = {Association for Computing Machinery},
+  publisher = {{Association for Computing Machinery}},
   address   = {New York, NY, USA},
   series    = {{POPL} '17},
   pages     = {818--832},
@@ -1727,7 +1738,7 @@
   author    = {Ying, Mingsheng and Feng, Yuan},
   year      = {2021},
   month     = jan,
-  publisher = {Cambridge University Press},
+  publisher = {{Cambridge University Press}},
   address   = {Cambridge},
   doi       = {10.1017/9781108613323},
   abstract  = {Model checking is one of the most successful verification techniques and has been widely adopted in traditional computing and communication hardware and software industries. This book provides the first systematic introduction to model checking techniques applicable to quantum systems, with broad potential applications in the emerging industry of quantum computing and quantum communication as well as quantum physics. Suitable for use as a course textbook and for self-study, graduate and senior undergraduate students will appreciate the step-by-step explanations and the exercises included. Researchers and engineers in the related fields can further develop these techniques in their own work, with the final chapter outlining potential future applications.},
@@ -1755,7 +1766,7 @@
   year      = {2021},
   month     = jun,
   booktitle = {Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
-  publisher = {Association for Computing Machinery},
+  publisher = {{Association for Computing Machinery}},
   address   = {New York, NY, USA},
   series    = {{{PLDI}} '21},
   pages     = {542--558},
@@ -1788,7 +1799,7 @@
   year          = {2021},
   month         = jul,
   booktitle     = {Proceedings of the 36th Annual ACM/IEEE Symposium on Logic in Computer Science},
-  publisher     = {IEEE Computer Society},
+  publisher     = {{IEEE Computer Society}},
   address       = {Los Alamitos, CA, USA},
   series        = {{{LICS}} '21},
   pages         = {1--14},
