--- a/bbt.bib
+++ b/bbt.bib
@@ -871,7 +871,7 @@
   year          = {2021},
   month         = nov,
   booktitle     = {41st IARCS Annual Conference on Foundations of Software Technology and Theoretical Computer Science (FSTTCS 2021)},
-  editor        = {Boja\'{n}czy, Miko{\l}aj and Chekuri, Chandra},
+  editor        = {Boja\'{n}czy, Mikołaj and Chekuri, Chandra},
   publisher     = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
   address       = {Dagstuhl, Germany},
   series        = {Leibniz International Proceedings in Informatics (LIPIcs)},
