--- a/bbt.bib
+++ b/bbt.bib
@@ -1450,7 +1450,7 @@
   keywords  = {formal verification, nisq, program proof, programming languages, semantic preservation, openqasm, qasm, quantum computing}
 }
 
-@mastersthesis{Singhal2020b,
+@mastersthesis{Singhal2020a,
   title         = {Quantum Hoare Type Theory},
   author        = {Singhal, Kartik},
   year          = {2020},
@@ -1462,7 +1462,7 @@
   url           = {https://ks.cs.uchicago.edu/publication/qhtt-masters/},
   abstract      = {As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. Inspired by Hoare Type Theory in classical computing, we propose Quantum Hoare Type Theory (QHTT), in which precise specifications about the modification to the quantum state can be provided within the type of computation. These specifications within a Hoare type are given in the form of Hoare-logic style pre- and postconditions following the propositions-as-types principle. The type-checking process verifies that the implementation conforms to the provided specification. QHTT has the potential to be a unified system for programming, specifying, and reasoning about quantum programs.},
   keywords      = {formal verification, program proof, programming languages, quantum computing, quantum computation, type systems, type theory, pre- and postconditions, program specifications},
-  note          = {See also: \cite{Singhal2020a}}
+  note          = {See also: \cite{Singhal2021a}}
 }
 
 @inproceedings{Singhal2021,
@@ -1491,7 +1491,7 @@
   url       = {https://ks.cs.uchicago.edu/publication/qhtt/},
   abstract  = {As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. In classical computing, formal verification and sound static type systems prevent several classes of bugs from being introduced. There is a need for similar techniques in the quantum regime. Inspired by Hoare Type Theory in the classical paradigm, we propose Quantum Hoare Types by extending the Quantum IO Monad by indexing it with pre- and post-conditions that serve as program specifications. In this paper, we introduce Quantum Hoare Type Theory (QHTT), present its syntax and typing rules, and demonstrate its effectiveness with the help of examples. QHTT has the potential to be a unified system for programming, specifying, and reasoning about quantum programs. This is a work in progress.},
   keywords  = {formal verification, program proof, programming languages, quantum computing, type systems, type theory, pre- and postconditions, program specifications},
-  note      = {Also see expanded version: \cite{Singhal2020b}}
+  note      = {Also see expanded version: \cite{Singhal2020a}}
 }
 
 @article{Sivarajah2020,
