--- a/bbt.bib
+++ b/bbt.bib
@@ -1608,6 +1608,8 @@
   year          = {2019},
   month         = jun,
   booktitle     = {Proceedings of the 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  publisher     = {{IEEE Computer Society}},
+  address       = {Los Alamitos, CA, USA},
   series        = {{{LICS}} '19},
   pages         = {1--13},
   doi           = {10.1109/LICS.2019.8785779},
