Remove duplicate entry, and merge with published version

--- a/bbt.bib
+++ b/bbt.bib
@@ -283,34 +283,24 @@
   note      = {Full Version: https://hal.archives-ouvertes.fr/hal-03154573/}
 }
 
-@misc{Chareton2020,
-  title         = {A {{Deductive Verification Framework}} for {{Circuit}}-Building {{Quantum Programs}}},
+@inproceedings{Chareton2021,
+  title         = {An Automated Deductive Verification Framework for Circuit-Building Quantum Programs},
   author        = {Chareton, Christophe and Bardin, S{\'e}bastien and Bobot, Fran{\c c}ois and Perrelle, Valentin and Valiron, Beno{\^i}t},
-  year          = {2020},
-  month         = jul,
-  crossref      = {Chareton2021},
+  year          = {2021},
+  month         = mar,
+  booktitle     = {Programming Languages and Systems, {{ESOP}} 2021},
+  editor        = {Yoshida, Nobuko},
+  publisher     = {{Springer International Publishing}},
+  address       = {{Cham}},
+  series        = {Lecture Notes in Computer Science},
+  volume        = {12648},
+  pages         = {148--177},
+  doi           = {10.1007/978-3-030-72019-3_6},
   archiveprefix = {arXiv},
   eprint        = {2003.05841},
-  abstract      = {While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. Early attempts either suffer from the lack of automation or parametrized reasoning, or target high-level abstract algorithm description languages far from the current de facto consensus of circuit-building quantum programming languages. As a consequence, no significant quantum algorithm implementation has been currently verified in a scale-invariant manner. We propose Qbricks, the first formal verification environment for circuit-building quantum programs, featuring clear separation between code and proof, parametric specifications and proofs, high degree of proof automation and allowing to encode quantum programs in a natural way, i.e. close to textbook style. Qbricks builds on best practice of formal verification for the classical case and tailor them to the quantum case: we bring a new domain-specific circuit-building language for quantum programs, namely Qbricks-DSL, together with a new logical specification language Qbricks-Spec and a dedicated Hoare-style deductive verification rule named Hybrid Quantum Hoare Logic. Especially, we introduce and intensively build upon HOPS, a higher-order extension of the recent path-sum symbolic representation, used for both specification and automation. To illustrate the opportunity of Qbricks, we implement the first verified parametric implementations of several famous and non-trivial quantum algorithms, including the quantum part of Shor integer factoring (Order Finding - Shor-OF), quantum phase estimation (QPE) - a basic building block of many quantum algorithms, and Grover search. These breakthroughs were amply facilitated by the specification and automated deduction principles introduced within Qbricks.},
-  note          = {Extended version of \cite{Chareton2021}}
-}
-
-@inproceedings{Chareton2021,
-  title     = {An Automated Deductive Verification Framework for Circuit-Building Quantum Programs},
-  author    = {Chareton, Christophe and Bardin, S{\'e}bastien and Bobot, Fran{\c c}ois and Perrelle, Valentin and Valiron, Beno{\^i}t},
-  year      = {2021},
-  month     = mar,
-  booktitle = {Programming Languages and Systems, {{ESOP}} 2021},
-  editor    = {Yoshida, Nobuko},
-  publisher = {{Springer International Publishing}},
-  address   = {{Cham}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {12648},
-  pages     = {148--177},
-  doi       = {10.1007/978-3-030-72019-3_6},
-  abstract  = {While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. In this paper we propose Qbricks, a formal verification environment for circuit-building quantum programs, featuring both parametric specifications and a high degree of proof automation. We propose a logical framework based on first-order logic, and develop the main tool we rely upon for achieving the automation of proofs of quantum specification: PPS, a parametric extension of the recently developed path sum semantics. To back-up our claims, we implement and verify parametric versions of several famous and non-trivial quantum algorithms, including the quantum parts of Shor's integer factoring, quantum phase estimation (QPE) and Grover's search.},
-  keywords  = {deductive verification, quantum programming, quantum circuits},
-  note      = {See extended version~\cite{Chareton2020} for additional technical material.}
+  abstract      = {While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. In this paper we propose Qbricks, a formal verification environment for circuit-building quantum programs, featuring both parametric specifications and a high degree of proof automation. We propose a logical framework based on first-order logic, and develop the main tool we rely upon for achieving the automation of proofs of quantum specification: PPS, a parametric extension of the recently developed path sum semantics. To back-up our claims, we implement and verify parametric versions of several famous and non-trivial quantum algorithms, including the quantum parts of Shor's integer factoring, quantum phase estimation (QPE) and Grover's search.},
+  keywords      = {deductive verification, quantum programming, quantum circuits},
+  note          = {See extended version for additional technical material.}
 }
 
 @misc{Chareton2021a,
